# discord-bots

./: Cargo.toml  LICENSE
src/: chain.rs  discord.rs  error.rs  lib.rs  tls.rs  ws.rs
src/discord/: model.rs
src/ws/: header.rs  message.rs
