[package]
name = "discord-bots"
version = "0.1.0"
authors = ["Jimmy Smith <rtsmarty@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.13.5"
tokio = { version="0.2.19", features=[ "macros" ] }
tokio-tls = "0.3.0"
futures = "0.3.4"
thiserror = "1.0.16"
http = "0.2.1"
serde = "1.0.106"
serde_json = "1.0.52"
serde_derive = "1.0.106"
bytes = "0.5.4"
rand = "0.8.4"
base64 = "0.12.0"
native-tls = "0.2.4"
smallvec = "1.4.0"
ring = "0.16"
structopt = "0.3.14"
regex = "1.6"
unicase = "2.6.0"
bitflags = "1.2.1"
