[package]
name = "discord-bots"
version = "0.1.0"
authors = ["Jimmy Smith <rtsmarty@gmail.com>"]
edition = "2018"

[dependencies]
hyper = { version="0.14.20", features=[ "client", "http1", "stream", "tcp" ] }
tokio = { version="1.21", features=[ "io-util", "macros", "net", "rt-multi-thread", "time" ] }
tokio-native-tls = "0.3.0"
futures = "0.3.24"
thiserror = "1.0"
http = "0.2.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bytes = "1.2"
rand = "0.8.5"
base64 = "0.13.0"
native-tls = "0.2.10"
smallvec = "1.9"
ring = "0.16.20"
clap = { version="3.2", features=[ "derive" ] }
regex = "1.6"
unicase = "2.6"
bitflags = "1.3"
