[package]
name    = "discord-bots"
version = "0.1.0"
authors = ["Jimmy Smith <rtsmarty@gmail.com>"]
edition = "2018"

[dependencies]
base64           = "0.13.0"
bitflags         = "1.3"
bytes            = "1.2"
futures          = "0.3.24"
http             = "0.2.8"
native-tls       = "0.2.10"
rand             = "0.8.5"
regex            = "1.6"
ring             = "0.16.20"
serde            = "1.0"
serde_json       = "1.0"
serde_derive     = "1.0"
smallvec         = "1.9"
thiserror        = "1.0"
tokio-native-tls = "0.3.0"
unicase          = "2.6"

[dependencies.clap]
version  = "3.2"
features = [ "derive" ]

[dependencies.hyper]
version  = "0.14.20"
features = [ "client", "http1", "stream", "tcp" ]

[dependencies.tokio]
version  = "1.21"
features = [ "io-utils", "macros", "net", "rt-multi-thread", "time" ]
